Revision history for Perl extension Math::Vector::Real::kdTree.

0.10    
        - most methods have been rewritten from scratch using better
          algorithms and removing recursion when possible
        - change internal data structure

0.09  Jun 17, 2013
        - add support for excluding more than one point in neighbor
          searching methods

0.08  Feb 16, 2013
        - add test for RT but #83330

0.07  Feb 15, 2013
        - insert method was broken (bug report by Greg Bronevetsky)
        - add test suite

0.06  Oct 22, 2012
        - add a clone method

0.05  Sep 21, 2012
        - insert now accepts several points and returns the index of
          the first element inserted

0.04  Jun 19, 2012
        - add hide method
        - move and _delete methods were broken
        - add ordered_by_proximity method

0.03  Jun 22, 2011
        - solve bug on find_nearest_neighbor when distance is limited

0.02  Jun 16, 2011
        - add find_in_ball method

0.01  Wed Jun 15 18:09:43 2011
	- original version; created by h2xs 1.23 with options
		-AXn Math::Vector::Real::kdTree
